Commit after revising index and yml files of GAA website.

--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,8 @@
 title: "ISSS626-GAA"
 ---
 
+Welcome to my **ISSS626 Geospatial Analytics and Applications** webpage. In this website, you will find my coursework prepared for this course.
+
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
