--- a/index.qmd
+++ b/index.qmd
@@ -1,13 +1,27 @@
 ---
-title: "ISSS626-GAA"
+title: "ISSS626-Geospatial Analytics and Applications Homepage"
+about:
+  template: jolla
+  image-width: 30em
+  image-shape: rectangle
+  image: 'images/map.gif'
+  links:
+    - icon: github
+      text: Github
+      href: https://github.com/zjho008
+    - icon: linkedin
+      text: LinkedIn
+      href: https://www.linkedin.com/in/ho-zi-jun-profile/
+    - icon: envelope-fill
+      text: Email
+      href: mailto:zijun.ho.2023@mitb.smu.edu.sg
+    - icon: diagram-3-fill
+      text: Tableau
+      href: https://public.tableau.com/app/profile/zi.jun.ho/vizzes
 ---
 
-Welcome to my **ISSS626 Geospatial Analytics and Applications** webpage. In this website, you will find my coursework prepared for this course.
+Hello there I am Zi Jun. Welcome to my **ISSS626 Geospatial Analytics and Applications** webpage. In this website, you will find my coursework prepared for this course.
 
-This is a Quarto website.
+Here is the [link](https://isss608-zjho008.netlify.app/ "Visual Analytics and Application webpage") for my Visual Analytics and Application course
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+**A Feature of My Latest Works:**
