--- a/index.qmd
+++ b/index.qmd
@@ -18,10 +18,22 @@ about:
     - icon: diagram-3-fill
       text: Tableau
       href: https://public.tableau.com/app/profile/zi.jun.ho/vizzes
+listing:
+  type: grid
+  max-items: 24
+  page-size: 5
+  grid-item-align: center
+  max-description-length: 130
+  contents:
+    - "In-class_Ex/*/*.qmd"
+    - "Hands-on_Ex/*/*.qmd"
+    - "Take-home_Ex/*/*.qmd"
+  sort: 
+    - "date desc"
 ---
 
-Hello there I am Zi Jun. Welcome to my **ISSS626 Geospatial Analytics and Applications** webpage. In this website, you will find my coursework prepared for this course.
+Hello there I am Zi Jun. Welcome to my **ISSS626 Geospatial Analytics and Applications** webpage. In this website, you will find my coursework prepared for this course under the tutelage of [Assoc. Professor Kam Tin Seong](https://faculty.smu.edu.sg/profile/kam-tin-seong-486)
 
-Here is the [link](https://isss608-zjho008.netlify.app/ "Visual Analytics and Application webpage") for my Visual Analytics and Application course
+Here is the webpage [link](https://isss608-zjho008.netlify.app/ "Visual Analytics and Application webpage") for my Visual Analytics and Application course
 
 **A Feature of My Latest Works:**
